--- a/templates/index.html
+++ b/templates/index.html
@@ -92,8 +92,8 @@
         <!-- Footer -->
         <div class='footer'>
             <div class="contact">
-                <a target="_blank" href="#"><i class="fab fa-github fa-lg contact-icon"></i></a>
-                <a target="_blank" href="#"><i class="fab fa-linkedin fa-lg contact-icon"></i></a>
+                <a target="_blank" href="https://github.com/raaviranjan/Movie_recommender"><i class="fab fa-github fa-lg contact-icon"></i></a>
+                <a target="_blank" href="https://www.linkedin.com/in/ravi-ranjan-5b9aa0157/"><i class="fab fa-linkedin fa-lg contact-icon"></i></a>
             </div>
            
             <p class='footer-description'>Made by Ravi Ranjan.</p>
