--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,7 @@
 
 
             <div class="movie" style="color: #E8E8E8;">
-                <center><h3>RECOMMENDED MOVIES FOR YOU</h3><h5>(Click any of the movies to get recommendation)</h5></center>
+                <center><h3>RECOMMENDED MOVIES FOR YOU</h3></center>
             </div>
 
             <div class="movie-content">
